# literature-evidence-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  README.md  opencode.json  pyproject.toml
.github/workflows/: ci.yml
docs/: ROUND1_1_COMPLETION_REPORT.md  VERSIONING_AND_BRANCHING.md  architecture.md  claim_contract.md  database_design.md  review_protocol.md  roadmap.md
docs/plans/: ROUND1_1_RC2_EXECUTION_LOG.md  ROUND1_EXECUTION_LOG.md
migrations/: 001_initial.sql  002_fts.sql  003_constraints.sql  004_review_batches.sql  005_review_integrity.sql
plan/: ROUND1_1_RC2_CONTINUATION_CODING_PLAN.md  ROUND1_1_RC2_NEXT_STAGE_PLAN_FROM_EF2926E.md  ROUND1_1_RC2_OPENCODE_DEEPSEEK_V4_PRO_CODING_PLAN.md  ROUND1_1_REMEDIATION_PLAN.md  ROUND1_DEEPSEEK_V4_PRO_PLAN.md  ROUND1_REVIEW_PLAN.md
scripts/: evaluate_golden.py  readme_smoke.py  release_gate.py
src/evidence_agent/: cli.py  config.py  ids.py  runtime.py  version.py
tests/: conftest.py
tests/e2e/: test_cli_round1_rc2.py  test_pipeline.py  test_real_pipeline.py
tests/golden/: annotations.jsonl  evaluator.py  extracted_claims.fixture.jsonl  golden_loader.py  golden_set.json  test_golden_set.py
tests/integration/: test_claim_persistence.py  test_cli_provider_selection.py  test_migrations.py  test_package_snapshot.py  test_package_snapshot_integrity.py  test_rebuild_complete_state.py  test_review_batches.py  test_runtime_context_isolation.py  test_sections_persistence.py
tests/regression/: test_execution_log_contract.py  test_rebuild_identity.py  test_review_edit_revalidation.py  test_verify_real_checks.py
(+63 files in other folders)
