[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "literature-evidence-agent"
version = "0.1.0"
description = "Literature Evidence Agent — 文献证据提取与人工复核系统"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "磁带", email = "zanderkong@craft.do" }
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pdfplumber>=0.10",
    "pypdf>=4.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
evidence-agent = "evidence_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "live_deepseek: tests requiring DeepSeek API (skipped in CI)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "C4", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
